--- a/Assests/css/style.css
+++ b/Assests/css/style.css
@@ -94,7 +94,51 @@
     padding: 5px;
   }
   .container{
+    margin-right: 20px;
+    margin-left: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+    background-color: beige;
+  }
+  .container>div{
     display: grid;
-    justify-content: space-between;
+    grid-gap: 5em;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+  .container>h3{
+    font-size: 30px;
+    margin-bottom: 20px;
+    margin-top: 60px;
+
+  }
+
+  .footer{
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: #050505;
+  }  
+  .footer>h5{
+    color: white;
+    font-size: 15px;
+    padding-left: 80px;
+    padding-top: 40px;
+  }
+  .footer>h5>span{
+    color: #eb1f10;
+  }
+  #footer {
+    display: flex;
+    align-items: center;
+  }
+  .Icon{
+    color: white;
+    float: left;
     
+  }
+  .columnHeading{
+    color: white;
+    padding: 30px 20px;
+    display: flex;
+    float: right;
   }
