--- a/Assests/css/style.css
+++ b/Assests/css/style.css
@@ -120,9 +120,10 @@
   }  
   .footer>h5{
     color: white;
-    font-size: 15px;
+    font-size: 20px;
     padding-left: 80px;
-    padding-top: 40px;
+    padding-top: 50px;
+    border-bottom: px white;
   }
   .footer>h5>span{
     color: #eb1f10;
@@ -130,15 +131,25 @@
   #footer {
     display: flex;
     align-items: center;
+    padding-left: 80px; 
+    justify-content: space-between;
   }
   .Icon{
     color: white;
     float: left;
-    
+    display: grid;
+    grid-gap: 3em;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
   }
   .columnHeading{
     color: white;
-    padding: 30px 20px;
+    padding: 80px;
+    display: grid;
+    grid-gap: 5em;
+    grid-template-columns: repeat(auto-fit, minmax(750px, 1fr));
     display: flex;
-    float: right;
+
   }
+  
+  
