--- a/Assests/css/style.css
+++ b/Assests/css/style.css
@@ -5,152 +5,177 @@
   overflow: auto;
   list-style: none;
   box-sizing: border-box;
-  font-family: 'Actor', sans-serif;
-  font-family: 'Adamina', serif;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", "Actor", "Adamina";
+
 }
 
 /*Navigation decoration*/
 .sec1 {
   background-image: url("../Images/moving\ 1.png");
   background-repeat: no-repeat;
+  
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
   margin-right: 20px;
   margin-left: 20px;
   height: 100vh;
+  
 
 }
 
-.sec1>nav> ul {
-  float: right;
+.sec1 > nav> ul {
+  text-align: right;
   margin-right: 30px;
   margin-top: 30px;
   }
 
-.sec1>nav>ul> li{
+.sec1 > nav> ul> li{
    display: inline-block;
    line-height: 80px;
    margin: 0 5px;
+   font-family: "Poppins", "Actor", "Adamina";
   }
 
-.sec1>nav>ul>li>a{
+.sec1> nav> ul> li> a{
     color: white;
     font-size: 18px;
-  }  
-  .sec1>nav>ul>li>a>#but1{
+  }
+
+.sec1 > nav > ul > li > a > .but1 {
     background-color:#FFAC12;
     color: black;
     font-size: 15px;
     padding: 5px 5px;
-   
+}
 
-  }
-  .sec1>nav>ul>li>a>#but2{
+.sec1 > nav > ul > li > a > .but2{
     background-color:black;
     color: #FAFF00;
     font-size: 15px;
     padding: 5px 5px;
-  }
+}
+
   /*content*/
-  .content>#motto {
+.content > .motto {
     color: #FAFF00;
     font-size: 30px;
     width: 370px;
     margin-left: 70px;
     margin-bottom: 35px;
-  }
-  .content>.para2 {
+    font-family: "Poppins", "Actor", "Adamina";
+}
+
+.content > .para2 {
     margin-left: 70px;
     font-size: 22px;
     width: 350px;
     margin-bottom: 260px;
     color: grey;
-  }
-  .sec2 {
+    font-family: "Poppins", "Actor", "Adamina";
+}
+
+.sec2 {
     margin-right: 20px;
     margin-left: 20px;
     margin-top: 60px;
     margin-bottom: 40px;
     display: flex;
+    font-family: "Poppins", "Actor", "Adamina";
     justify-content: space-between;
-  }
-  .cutHusle{
+
+}
+
+.cut {
     padding-right: 600px;
     padding-top: 60px;
-  }
-  .cutHusle>div>img{
-    float: left;
-  }
-  .cutHusle>p{
+ }
+
+.cut > div > img {
+    text-align: right;
+}
+  .cut > p {
     width: 280px;
-    float: right;
+    text-align: left;
     align-content: center;
-  }
-  .cutHusle>button{
+}
+
+.cut > button {
     background-color: black;
     color: #FAFF00;
     border-top-right-radius: 8px;
     padding: 5px;
-  }
-  .container{
+}
+
+.container {
     margin-right: 20px;
     margin-left: 20px;
     padding-left: 80px;
     padding-right: 80px;
     background-color: beige;
-  }
-  .container>div{
+}
+
+.container > div {
     display: grid;
     grid-gap: 5em;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  }
-  .container>h3{
+}
+
+.container > h3 {
     font-size: 30px;
     margin-bottom: 20px;
     margin-top: 60px;
+    font-family: "Poppins", "Actor", "Adamina";
 
-  }
+}
 
-  .footer{
+.footer {
     margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
     background-color: #050505;
-  }  
-  .footer>h5{
+}  
+
+.footer > h5 {
     color: white;
     font-size: 20px;
     padding-left: 80px;
     padding-top: 50px;
     border-bottom: px white;
-  }
-  .footer>h5>span{
+    font-family: "Poppins", "Actor", "Adamina";
+}
+
+.footer > h5 > span {
     color: #eb1f10;
-  }
-  #footer {
-    display: flex;
+}
+
+.footer > .footers {
     align-items: center;
+    display: flex;
     padding-left: 80px; 
     justify-content: space-between;
-  }
-  .Icon{
+}
+
+.icon{
     color: white;
-    float: left;
-    display: grid;
+    text-align: left;
     grid-gap: 3em;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     display: flex;
-  }
-  .columnHeading{
+}
+
+.columnHeading{
     color: white;
     padding: 80px;
-    display: grid;
     grid-gap: 5em;
     grid-template-columns: repeat(auto-fit, minmax(750px, 1fr));
     display: flex;
+    font-family: "Poppins", "Actor", "Adamina";
 
-  }
+}
+
+.columnHeading > h4, p{
+  font-family: "Poppins", "Actor", "Adamina";
+}
   
   
