--- a/Assests/css/styles2.css
+++ b/Assests/css/styles2.css
@@ -46,13 +46,13 @@
   display: flex;
   justify-items: space-between;
   padding: 10px;
-  }
+}
 .sec2>.prop>.otherImg>img{
    padding: 10px;
    justify-content: space-evenly;
    width: 300px;
-    }
-#features{
+}
+.features{
   display: flex;
   justify-content: space-evenly;
 }
@@ -65,51 +65,56 @@
 .listings{
   display: grid;
   grid-gap: 2em;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
  
-.footer{
+.footer {
   margin-top: 0px;
   margin-left: 20px;
   margin-right: 20px;
   background-color: #050505;
-}
-}
-.dream{
-  color: white;
-  display: flex;
-  justify-content: space-between;
-}
-.dream>div>p>span{
-  color: #eb1f10;
-}
+}  
 
-.dream>p{
+.footer > h5 {
   color: white;
   font-size: 20px;
   padding-left: 80px;
   padding-top: 50px;
   border-bottom: px white;
+  font-family: "Poppins", "Actor", "Adamina";
 }
-#footer {
-  display: flex;
+
+.footer > h5 > span {
+  color: #eb1f10;
+}
+
+.footer > .footers {
   align-items: center;
+  display: flex;
   padding-left: 80px; 
   justify-content: space-between;
 }
-.Icon{
+
+.icon{
   color: white;
-  float: left;
-  display: grid;
+  text-align: left;
   grid-gap: 3em;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   display: flex;
 }
+
 .columnHeading{
   color: white;
   padding: 80px;
-  display: grid;
-  grid-gap: 1em;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 5em;
+  grid-template-columns: repeat(auto-fit, minmax(750px, 1fr));
   display: flex;
+  font-family: "Poppins", "Actor", "Adamina";
 
 }
+
+.columnHeading > h4, p{
+font-family: "Poppins", "Actor", "Adamina";
+}
+  
